examples/test/testpolicy1557.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1557
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key44: value47
      key47: value46
      key17: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value16
          key13: value4
          key25: value17
      podSelector:
        matchLabels:
          key17: value35
          key45: value37
